Added error handling
