# docs/swagger.json
@@ -13,7 +13,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/resources": {
+        "/v1/resources": {
             "get": {
                 "description": "Get all the nodes present in the graph",
                 "consumes": [
@@ -22,12 +22,21 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Resources"
+                ],
                 "summary": "Get all the resources",
                 "responses": {
                     "200": {
                         "description": "ok",
                         "schema": {
                             "$ref": "#/definitions/resource.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/views.ErrView"
                         }
                     }
                 }
@@ -39,6 +48,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Resources"
                 ],
                 "summary": "Create a new Resource",
                 "parameters": [
@@ -57,6 +69,12 @@
                         "description": "ok",
                         "schema": {
                             "$ref": "#/definitions/resource.Element"
+                        }
+                    },
+                    "500": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/views.ErrView"
                         }
                     }
                 }
@@ -195,6 +213,35 @@
                     "$ref": "#/definitions/resource.relationshipsInput"
                 },
                 "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "views.ErrView": {
+            "type": "object",
+            "properties": {
+                "detail": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "source": {
+                    "type": "object",
+                    "$ref": "#/definitions/views.Source"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "views.Source": {
+            "type": "object",
+            "properties": {
+                "parameter": {
+                    "type": "string"
+                },
+                "pointer": {
                     "type": "string"
                 }
             }
